# aoc-2024

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: poetry.yml
aoc_2024/day_01/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_02/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_03/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_04/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_05/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_06/: a.py  b.py  from_prompt.py  input.txt
aoc_2024/day_07/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_08/: a.py  b.py  from_prompt.py  input.txt
aoc_2024/day_09/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_10/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_11/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_12/: a.py  b.py  from_prompt.py  input.txt
aoc_2024/day_13/: a.py  b.py  from_prompt.py  input.txt  models.py  parser.py
aoc_2024/day_14/: a.py  b.py  from_prompt.py  input.txt  parser.py  tree_determiner_determiner.py
aoc_2024/day_15/: a.py  b.py  from_prompt.py  input.txt  parser.py
aoc_2024/day_16/: a.py  b.py  from_prompt.py  input.txt
aoc_2024/day_17/: a.py  b.py  from_prompt.py  input.txt  machine.py  parser.py
aoc_2024/day_18/: a.py  b.py  from_prompt.py  input.txt  parser.py  solver.py
aoc_2024/day_19/: a.py  b.py  from_prompt.py  input.txt  parser.py
utils/: create_files.py  file_data.py  submit.py
(+69 files in other folders)
