[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Tyler Hoffman <tyler.hoffman@greatexpectations.io>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.13"
pyright = "^1.1.389"
pytest = "^8.3.3"
ruff = "^0.8.0"
advent-of-code-data = "^2.0.4"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
